@@ -1,10 +1,13 @@
 package com.xpanxion.java.assignments.student5;
 
 import com.xpanxion.java.assignments.DataAccess;
+import com.xpanxion.java.assignments.model.Cat;
 import com.xpanxion.java.assignments.model.Department;
+import com.xpanxion.java.assignments.model.Person;
 import com.xpanxion.java.assignments.model.Product;
 
 import java.text.NumberFormat;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
@@ -31,14 +34,14 @@ public class Worker5 {
             product.setDepartmentName("N/A");
             System.out.println(product);
             return product;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     public void ex3() {
         List<Product> products = DataAccess.getProducts().stream()
                 .filter(product ->
                         product.getDepartmentId()==1 && product.getPrice()>=10.00)
-                .collect(Collectors.toList());
+                .toList();
         System.out.println(products);
     }
 
@@ -51,5 +54,23 @@ public class Worker5 {
                 .mapToDouble(Product::getPrice).sum();
 
         System.out.println(formatter.format(foodDeptSum));
+    }
+
+    public void ex5() {
+        List<Person> people = DataAccess.getPeople().stream().map(person -> {
+                    var ssn = person.getSsn();
+                    var ssnLength = ssn.length();
+                    person.setSsn(ssn.substring(ssnLength-4));
+                    return person;
+                }).toList();
+        System.out.println(people);
+    }
+
+    public void ex6() {
+        List<Cat> cats =  DataAccess.getCats()
+                .stream().sorted(Comparator.comparing(Cat::getName))
+                .toList();
+
+        System.out.println(cats);
     }
 }
